k8s/base/_archive/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  namespace: task-manager-dev                  # tạo namespace dev trước nếu chưa có
  labels:
    app: backend
    environment: dev
spec:
  containers:
  - name: backend
    image: task-manager-backend:v1.0.0     # phải khớp với image đã load
    imagePullPolicy: IfNotPresent          # quan trọng khi dùng kind
    
    ports:
    - name: http
      containerPort: 3000
      protocol: TCP

    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 300m
        memory: 256Mi
